# gmail-archiver

./: .gitignore  AGENTS.md  Cargo.toml  README.md  client_secret.example.json
src/: archive.rs  auth.rs  gmail.rs  main.rs
