[package]
name = "gmail-archiver"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
base64 = "0.22"
chrono = { version = "0.4", features = ["clock", "serde"] }
clap = { version = "4.5", features = ["derive"] }
dirs = "6.0"
indicatif = "0.17"
rand = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["charset", "http2", "json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tokio = { version = "1.44", features = ["macros", "rt-multi-thread", "sync"] }
url = "2.5"
webbrowser = "1.0"
zip = { version = "0.6", default-features = false, features = ["deflate"] }
